.metadata/.plugins/org.eclipse.cdt.ui/AlertSystem.build.log
16:38:36 **** Incremental Build of configuration Debug for project AlertSystem ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:27:1: error: unknown type name 'class'
   27 | class GPIO {
      | ^~~~~
../Core/Src/main.c:27:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   27 | class GPIO {
      |            ^
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:54:5: error: 'GPIO' undeclared (first use in this function); did you mean 'GPIOD'?
   54 |     GPIO::enableClock(); // Enable GPIOA clock
      |     ^~~~
      |     GPIOD
../Core/Src/main.c:54:5: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:54:9: error: expected ';' before '::' token
   54 |     GPIO::enableClock(); // Enable GPIOA clock
      |         ^~
      |         ;
../Core/Src/main.c:55:9: error: expected ';' before '::' token
   55 |     GPIO::setModeOutput(); // Configure PA1 as output
      |         ^~
      |         ;
../Core/Src/main.c:57:12: error: 'true' undeclared (first use in this function)
   57 |     while (true) {
      |            ^~~~
../Core/Src/main.c:21:1: note: 'true' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
   20 | #include "main.h"
  +++ |+#include <stdbool.h>
   21 | 
../Core/Src/main.c:58:13: error: expected ';' before '::' token
   58 |         GPIO::setHigh(); // Set PA1 high
      |             ^~
      |             ;
../Core/Src/main.c:61:13: error: expected ';' before '::' token
   61 |         GPIO::setLow(); // Set PA1 low
      |             ^~
      |             ;
../Core/Src/main.c: At top level:
../Core/Src/main.c:112:5: error: redefinition of 'main'
  112 | int main(void)
      |     ^~~~
../Core/Src/main.c:53:5: note: previous definition of 'main' with type 'int()'
   53 | int main() {
      |     ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:38:37 Build Failed. 10 errors, 0 warnings. (took 1s.358ms)

